# Thesis2.0

./: CMakeLists.txt
include/entities/: draw.hpp  field.hpp  goal_post.hpp  line.hpp  robot.hpp
include/main/: main.hpp
include/potential_field_logic/: attr.hpp  vec_repl.hpp
src/: keyboard_event.cpp  main.cpp  old_method.cpp  potential_field_visualization_2d.cpp  potential_field_visualization_3d.cpp  repl_only.cpp  robot_movement.cpp  try_viz.cpp
